--- a/index.html
+++ b/index.html
@@ -921,10 +921,10 @@
           <!-- Item 10 -->
           <div class="col-md-6 col-lg-4 portfolio-item mobiledesign ">
             <div class="portfolio-image">
-              <img src="assets/img/Certificate/_.._CER_STUDENT_sm-snk1_cerby_compet_64_school_12_page-0001.jpeg"
+              <img src="assets/img/Certificate/การแข่งขันการสร้างเกมสร้างสรรค์จากคอมพิวเตอร์ ม.4-ม.6-รูปภาพ-1.jpg"
                 alt="/">
               <div class="portfolio-icon">
-                <a href="assets/img/Certificate/_.._CER_STUDENT_sm-snk1_cerby_compet_64_school_12_page-0001.jpeg"
+                <a href="assets/img/Certificate/การแข่งขันการสร้างเกมสร้างสรรค์จากคอมพิวเตอร์ ม.4-ม.6-รูปภาพ-1.jpg"
                   target="_blank">
                   <i class="bi bi-file-earmark-text"></i>
                 </a>
